--- a/index.html
+++ b/index.html
@@ -75,5 +75,82 @@
             </div>
         </div>
     </section>
+
+    <!-- Cli -->
+    <section class="cli">
+        <div class="container grid">
+            <img src="images/cli.png" alt="command line interface command to install Loruki package globally using npm">
+            <div class="card">
+                <h3>Easy to use, cross platform CLI</h3>
+            </div>
+            <div class="card">
+                <h3>Deploy in seconds</h3>
+            </div>
+        </div>
+    </section>
+
+    <!-- Cloud -->
+    <section class="cloud bg-primary my-2 py-2">
+        <div class="container grid">
+            <div class="text-center">
+                <h2 class="lg">Extreme Cloud Hosting</h2>
+                <p class="lead my-1">Cloud hosting like you've never seen. Fast, efficient and scalable</p>
+                <a href="features.html" class="btn btn-dark">Read More</a>
+            </div>
+            <img src="images/cloud.png" alt="Laptop connected to Cloud Hosting">
+        </div>
+    </section>
+
+    <!-- Languages -->
+    <section class="languages">
+        <h2 class="md text-center my-2">Supporteed Languages</h2>
+        <div class="container flex">
+            <div class="card">
+                <h4>Node.js</h4>
+                <img src="images/logos/node.png" alt="Node.js Logo">
+            </div>
+            <div class="card">
+                <h4>Python</h4>
+                <img src="images/logos/python.png" alt="">
+              </div>
+              <div class="card">
+                <h4>C#</h4>
+                <img src="images/logos/csharp.png" alt="">
+              </div>
+              <div class="card">
+                <h4>Ruby</h4>
+                <img src="images/logos/ruby.png" alt="">
+              </div>
+              <div class="card">
+                <h4>PHP</h4>
+                <img src="images/logos/php.png" alt="">
+              </div>
+              <div class="card">
+                <h4>Scala</h4>
+                <img src="images/logos/scala.png" alt="">
+              </div>
+              <div class="card">
+                <h4>Clojure</h4>
+                <img src="images/logos/clojure.png" alt="">
+              </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div>
+                <h1>Loruki</h1>
+                <p>Copyright &copy; 2020</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="features.html">Features</a></li>
+                    <li><a href="docs.html">Docs</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
