11803 showcase form next

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <div class="showcase-form card">
                 <h2>Request a Demo</h2>
-                <form action="">
+                <form>
                     <div class="form-control">
                         <input type="text" name="name" placeholder="Name" required>
                     </div>
@@ -150,6 +150,12 @@
                     <li><a href="docs.html">Docs</a></li>
                 </ul>
             </nav>
+            <div class="social">
+                <a href="#"><i class="fab fa-github fa-2x"></i></a>
+                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            </div>
         </div>
     </footer>
 </body>
